tests/NormalTests/paczka1/fuzzy1/99830499.err
Error in line 1: oOuwpc S344 7,5
Error in line 20: cpyDwGZROG S286 76,2
Error in line 16: yZP S344 59,2
Error in line 21: cpyDwGZROG S663 10,4
Error in line 32: cpyDwGZROG S286 25,1
Error in line 33: cpyDwGZROG S979 52,8
Error in line 38: yZP S979 26,2
